# Vulkan-Starter-Engine

./: .gitignore  CMakeLists.txt  README.md
src/: first_app.cpp  first_app.hpp  glslc.sh  jde_device.cpp  jde_device.hpp  jde_pipeline.cpp  jde_pipeline.hpp  jde_swap_chain.cpp  jde_swap_chain.hpp  jde_window.cpp  jde_window.hpp  main.cpp
src/shaders/: simple_shader.frag  simple_shader.frag.spv
